// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Brokers Component Brokers Empty matches Brokers Empty snapshot 1`] = `
<StaticRouter
  context={Object {}}
  location={
    Object {
      "pathname": "ui/clusters/local/brokers",
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "ui/clusters/local/brokers",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    staticContext={Object {}}
  >
    <Brokers
      activeControllers={0}
      brokerCount={0}
      fetchBrokers={
        [MockFunction] {
          "calls": Array [
            Array [
              undefined,
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      fetchClusterStats={
        [MockFunction] {
          "calls": Array [
            Array [
              undefined,
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      inSyncReplicasCount={0}
      isFetched={false}
      offlinePartitionCount={0}
      onlinePartitionCount={0}
      outOfSyncReplicasCount={0}
      underReplicatedPartitionCount={0}
      version="1"
      zooKeeperStatus={0}
    >
      <div
        className="section"
      >
        <div
          className="metrics-box mb-2"
        >
          <MetricsWrapper
            title="Uptime"
            wrapperClassName="is-flex-grow-1"
          >
            <div
              className="is-flex-grow-1"
            >
              <h5
                className="is-7 has-text-weight-medium mb-2"
              >
                Uptime
              </h5>
              <div
                className="box"
              >
                <div
                  className="level"
                >
                  <Indicator
                    className="is-one-third"
                    label="Total Brokers"
                  >
                    <div
                      className="level-item is-one-third"
                    >
                      <div>
                        <p
                          className="is-size-8"
                        >
                          Total Brokers
                        </p>
                        <p
                          className="is-size-6 has-text-weight-medium"
                        >
                          0
                        </p>
                      </div>
                    </div>
                  </Indicator>
                  <Indicator
                    className="is-one-third"
                    label="Active Controllers"
                  >
                    <div
                      className="level-item is-one-third"
                    >
                      <div>
                        <p
                          className="is-size-8"
                        >
                          Active Controllers
                        </p>
                        <p
                          className="is-size-6 has-text-weight-medium"
                        >
                          0
                        </p>
                      </div>
                    </div>
                  </Indicator>
                  <Indicator
                    className="is-one-third"
                    label="Zookeeper Status"
                  >
                    <div
                      className="level-item is-one-third"
                    >
                      <div>
                        <p
                          className="is-size-8"
                        >
                          Zookeeper Status
                        </p>
                        <p
                          className="is-size-6 has-text-weight-medium"
                        >
                          <span
                            className="tag is-danger"
                          >
                            Offline
                          </span>
                        </p>
                      </div>
                    </div>
                  </Indicator>
                  <Indicator
                    className="is-one-third"
                    label="Version"
                  >
                    <div
                      className="level-item is-one-third"
                    >
                      <div>
                        <p
                          className="is-size-8"
                        >
                          Version
                        </p>
                        <p
                          className="is-size-6 has-text-weight-medium"
                        >
                          1
                        </p>
                      </div>
                    </div>
                  </Indicator>
                </div>
              </div>
            </div>
          </MetricsWrapper>
          <MetricsWrapper
            title="Partitions"
            wrapperClassName="is-flex-grow-1"
          >
            <div
              className="is-flex-grow-1"
            >
              <h5
                className="is-7 has-text-weight-medium mb-2"
              >
                Partitions
              </h5>
              <div
                className="box"
              >
                <div
                  className="level"
                >
                  <Indicator
                    label="Online"
                  >
                    <div
                      className="level-item"
                    >
                      <div>
                        <p
                          className="is-size-8"
                        >
                          Online
                        </p>
                        <p
                          className="is-size-6 has-text-weight-medium"
                        >
                          <span
                            className=""
                          >
                            0
                          </span>
                          <span
                            className="has-text-weight-light"
                          >
                             
                            of 
                            0
                          </span>
                        </p>
                      </div>
                    </div>
                  </Indicator>
                  <Indicator
                    label="URP"
                    title="Under replicated partitions"
                  >
                    <div
                      className="level-item"
                    >
                      <div
                        title="Under replicated partitions"
                      >
                        <p
                          className="is-size-8"
                        >
                          URP
                        </p>
                        <p
                          className="is-size-6 has-text-weight-medium"
                        >
                          0
                        </p>
                      </div>
                    </div>
                  </Indicator>
                  <Indicator
                    label="In Sync Replicas"
                  >
                    <div
                      className="level-item"
                    >
                      <div>
                        <p
                          className="is-size-8"
                        >
                          In Sync Replicas
                        </p>
                        <p
                          className="is-size-6 has-text-weight-medium"
                        >
                          0
                        </p>
                      </div>
                    </div>
                  </Indicator>
                  <Indicator
                    label="Out of Sync Replicas"
                  >
                    <div
                      className="level-item"
                    >
                      <div>
                        <p
                          className="is-size-8"
                        >
                          Out of Sync Replicas
                        </p>
                        <p
                          className="is-size-6 has-text-weight-medium"
                        >
                          0
                        </p>
                      </div>
                    </div>
                  </Indicator>
                </div>
              </div>
            </div>
          </MetricsWrapper>
          <MetricsWrapper
            multiline={true}
            title="Disk Usage"
            wrapperClassName="is-flex-grow-1"
          >
            <div
              className="is-flex-grow-1"
            >
              <h5
                className="is-7 has-text-weight-medium mb-2"
              >
                Disk Usage
              </h5>
              <div
                className="box"
              >
                <div
                  className="level level-multiline"
                />
              </div>
            </div>
          </MetricsWrapper>
        </div>
      </div>
    </Brokers>
  </Router>
</StaticRouter>
`;

exports[`Brokers Component Brokers matches snapshot 1`] = `
<StaticRouter
  context={Object {}}
  location={
    Object {
      "pathname": "ui/clusters/local/brokers",
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "ui/clusters/local/brokers",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    staticContext={Object {}}
  >
    <Brokers
      activeControllers={1}
      brokerCount={1}
      diskUsage={
        Array [
          Object {
            "brokerId": 1,
            "segmentCount": 64,
            "segmentSize": 60718,
          },
        ]
      }
      fetchBrokers={
        [MockFunction] {
          "calls": Array [
            Array [
              undefined,
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      fetchClusterStats={
        [MockFunction] {
          "calls": Array [
            Array [
              undefined,
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      inSyncReplicasCount={64}
      isFetched={true}
      offlinePartitionCount={0}
      onlinePartitionCount={64}
      outOfSyncReplicasCount={0}
      underReplicatedPartitionCount={0}
      version="1"
      zooKeeperStatus={1}
    >
      <div
        className="section"
      >
        <div
          className="metrics-box mb-2"
        >
          <MetricsWrapper
            title="Uptime"
            wrapperClassName="is-flex-grow-1"
          >
            <div
              className="is-flex-grow-1"
            >
              <h5
                className="is-7 has-text-weight-medium mb-2"
              >
                Uptime
              </h5>
              <div
                className="box"
              >
                <div
                  className="level"
                >
                  <Indicator
                    className="is-one-third"
                    label="Total Brokers"
                  >
                    <div
                      className="level-item is-one-third"
                    >
                      <div>
                        <p
                          className="is-size-8"
                        >
                          Total Brokers
                        </p>
                        <p
                          className="is-size-6 has-text-weight-medium"
                        >
                          1
                        </p>
                      </div>
                    </div>
                  </Indicator>
                  <Indicator
                    className="is-one-third"
                    label="Active Controllers"
                  >
                    <div
                      className="level-item is-one-third"
                    >
                      <div>
                        <p
                          className="is-size-8"
                        >
                          Active Controllers
                        </p>
                        <p
                          className="is-size-6 has-text-weight-medium"
                        >
                          1
                        </p>
                      </div>
                    </div>
                  </Indicator>
                  <Indicator
                    className="is-one-third"
                    label="Zookeeper Status"
                  >
                    <div
                      className="level-item is-one-third"
                    >
                      <div>
                        <p
                          className="is-size-8"
                        >
                          Zookeeper Status
                        </p>
                        <p
                          className="is-size-6 has-text-weight-medium"
                        >
                          <span
                            className="tag is-success"
                          >
                            Online
                          </span>
                        </p>
                      </div>
                    </div>
                  </Indicator>
                  <Indicator
                    className="is-one-third"
                    label="Version"
                  >
                    <div
                      className="level-item is-one-third"
                    >
                      <div>
                        <p
                          className="is-size-8"
                        >
                          Version
                        </p>
                        <p
                          className="is-size-6 has-text-weight-medium"
                        >
                          1
                        </p>
                      </div>
                    </div>
                  </Indicator>
                </div>
              </div>
            </div>
          </MetricsWrapper>
          <MetricsWrapper
            title="Partitions"
            wrapperClassName="is-flex-grow-1"
          >
            <div
              className="is-flex-grow-1"
            >
              <h5
                className="is-7 has-text-weight-medium mb-2"
              >
                Partitions
              </h5>
              <div
                className="box"
              >
                <div
                  className="level"
                >
                  <Indicator
                    label="Online"
                  >
                    <div
                      className="level-item"
                    >
                      <div>
                        <p
                          className="is-size-8"
                        >
                          Online
                        </p>
                        <p
                          className="is-size-6 has-text-weight-medium"
                        >
                          <span
                            className=""
                          >
                            64
                          </span>
                          <span
                            className="has-text-weight-light"
                          >
                             
                            of 
                            64
                          </span>
                        </p>
                      </div>
                    </div>
                  </Indicator>
                  <Indicator
                    label="URP"
                    title="Under replicated partitions"
                  >
                    <div
                      className="level-item"
                    >
                      <div
                        title="Under replicated partitions"
                      >
                        <p
                          className="is-size-8"
                        >
                          URP
                        </p>
                        <p
                          className="is-size-6 has-text-weight-medium"
                        >
                          0
                        </p>
                      </div>
                    </div>
                  </Indicator>
                  <Indicator
                    label="In Sync Replicas"
                  >
                    <div
                      className="level-item"
                    >
                      <div>
                        <p
                          className="is-size-8"
                        >
                          In Sync Replicas
                        </p>
                        <p
                          className="is-size-6 has-text-weight-medium"
                        >
                          64
                        </p>
                      </div>
                    </div>
                  </Indicator>
                  <Indicator
                    label="Out of Sync Replicas"
                  >
                    <div
                      className="level-item"
                    >
                      <div>
                        <p
                          className="is-size-8"
                        >
                          Out of Sync Replicas
                        </p>
                        <p
                          className="is-size-6 has-text-weight-medium"
                        >
                          0
                        </p>
                      </div>
                    </div>
                  </Indicator>
                </div>
              </div>
            </div>
          </MetricsWrapper>
          <MetricsWrapper
            multiline={true}
            title="Disk Usage"
            wrapperClassName="is-flex-grow-1"
          >
            <div
              className="is-flex-grow-1"
            >
              <h5
                className="is-7 has-text-weight-medium mb-2"
              >
                Disk Usage
              </h5>
              <div
                className="box"
              >
                <div
                  className="level level-multiline"
                >
                  <Indicator
                    className="is-one-third"
                    label="Broker"
                  >
                    <div
                      className="level-item is-one-third"
                    >
                      <div>
                        <p
                          className="is-size-8"
                        >
                          Broker
                        </p>
                        <p
                          className="is-size-6 has-text-weight-medium"
                        >
                          1
                        </p>
                      </div>
                    </div>
                  </Indicator>
                  <Indicator
                    className="is-one-third"
                    label="Segment Size"
                    title=""
                  >
                    <div
                      className="level-item is-one-third"
                    >
                      <div
                        title=""
                      >
                        <p
                          className="is-size-8"
                        >
                          Segment Size
                        </p>
                        <p
                          className="is-size-6 has-text-weight-medium"
                        >
                          <BytesFormatted
                            value={60718}
                          >
                            <span>
                              59KB
                            </span>
                          </BytesFormatted>
                        </p>
                      </div>
                    </div>
                  </Indicator>
                  <Indicator
                    className="is-one-third"
                    label="Segment count"
                  >
                    <div
                      className="level-item is-one-third"
                    >
                      <div>
                        <p
                          className="is-size-8"
                        >
                          Segment count
                        </p>
                        <p
                          className="is-size-6 has-text-weight-medium"
                        >
                          64
                        </p>
                      </div>
                    </div>
                  </Indicator>
                </div>
              </div>
            </div>
          </MetricsWrapper>
        </div>
      </div>
    </Brokers>
  </Router>
</StaticRouter>
`;
